# dash

./: CLAUDE.md  LICENSE  README.md  ngrok.yml
agent/: README.md
agent/functions/: .env.example  README.md  project.yml
agent/knowledge_base/: sample_pnl_2020.csv  sample_pnl_2021.csv  sample_pnl_2022.csv  sample_pnl_2023.csv  sample_pnl_2024.csv
chat/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
chat/backend/: .env.example  README_SLACK.md  chat_service.py  main.py  pyproject.toml  slack_bot.py  slack_manifest.yml  test_slack_integration.py
chat/src/: app.css
chat/src/lib/api/: chat.ts
chat/src/lib/components/: ChatInput.svelte  ChatMessage.svelte  MessageList.svelte  NewConversationButton.svelte  ThemeToggle.svelte
chat/src/lib/stores/: chat.ts
chat/src/routes/: +layout.svelte  +page.svelte
voice/: .env.example  README.md  main.py  pyproject.toml
voice/functions/: add_airtable_lead.py  airtable_leads.py  get_latest_workspaces.py  list_airtable_leads.py  run_sql_query.py  web_search.py
